--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:id="@+id/noteItem">
+    app:cardCornerRadius="10dp"
+    android:id="@+id/noteItem"
+    android:layout_marginHorizontal="6dp"
+    android:layout_marginTop="0.5dp"
+    android:layout_marginBottom="4.5dp"
+    app:cardElevation="7dp">
 
-    <TextView
-        android:maxLines="1"
-        android:id="@+id/tv_noteTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/note_title"
-        android:textSize="21sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp" >
 
-    <TextView
-        android:maxLines="1"
-        android:id="@+id/tv_noteDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/note_content"
-        android:textSize="15sp"/>
+        <TextView
+            android:maxLines="1"
+            android:id="@+id/tv_noteTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/note_title"
+            android:textSize="21sp"/>
+
+        <TextView
+            android:maxLines="1"
+            android:id="@+id/tv_noteDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/note_content"
+            android:textSize="15sp"/>
 
 
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
+
