--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_add_note" >
         <action
             android:id="@+id/action_addNoteFragment_to_noteListFragment"
-            app:destination="@id/noteListFragment" />
+            app:destination="@id/noteListFragment"
+            app:popUpTo="@id/my_nav"
+            app:popUpToInclusive="true"/>
     </fragment>
 
     <fragment
@@ -35,7 +37,9 @@
         tools:layout="@layout/fragment_note_details">
         <action
             android:id="@+id/action_noteDetailsFragment_to_noteListFragment"
-            app:destination="@id/noteListFragment" />
+            app:destination="@id/noteListFragment"
+            app:popUpTo="@id/my_nav"
+            app:popUpToInclusive="true"/>
         <argument
             android:name="currentNote"
             app:argType="com.judahben149.noteify.model.Note" />
