--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawerLayout"
+    android:fitsSystemWindows="true"
     tools:context=".activities.MainActivity">
 
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    >-->
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:fitsSystemWindows="true"
-        app:expanded="true">
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:id="@+id/appBar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        app:expanded="true">-->
 
-<!--        &lt;!&ndash;            &lt;!&ndash; app:layout_scrollFlags="scroll|exitUntilCollapsed" &ndash;&gt;&ndash;&gt;-->
-<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--            android:id="@+id/toolbarLayout"-->
+<!--        &lt;!&ndash;        &lt;!&ndash;            &lt;!&ndash; app:layout_scrollFlags="scroll|exitUntilCollapsed" &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--        &lt;!&ndash;        <com.google.android.material.appbar.CollapsingToolbarLayout&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:id="@+id/toolbarLayout"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_height="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:fitsSystemWindows="true"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:contentScrim="?attr/colorPrimary"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_scrollFlags="scroll|exitUntilCollapsed"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:toolbarId="@+id/toolbar"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:titleEnabled="true">&ndash;&gt;-->
+
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
 <!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:fitsSystemWindows="true"-->
-<!--            app:contentScrim="?attr/colorPrimary"-->
-<!--            app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
-<!--            app:toolbarId="@+id/toolbar"-->
-<!--            app:titleEnabled="true">-->
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--            android:layout_height="match_parent">-->
 
 
             <androidx.appcompat.widget.Toolbar
@@ -42,33 +48,33 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_collapseMode="pin" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="25dp"
-                android:fontFamily="@font/sf_pro_text_medium"
-                android:text="@string/app_name"
-                android:textSize="30sp"
-                android:textColor="@color/black"
-                />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                android:layout_marginStart="25dp"-->
+<!--                android:fontFamily="@font/sf_pro_text_medium"-->
+<!--                android:text="@string/app_name"-->
+<!--                android:textSize="30sp"-->
+<!--                android:textColor="@color/black"-->
+<!--                />-->
 
-            <ImageView
-                android:id="@+id/deleteAllNotesIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_delete"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="20dp"
-                />
+<!--            <ImageView-->
+<!--                android:id="@+id/deleteAllNotesIcon"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/ic_delete"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                />-->
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    </com.google.android.material.appbar.AppBarLayout>
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
 
 
 
@@ -77,12 +83,25 @@
         android:id="@+id/fragmentContainerView2"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBar"
         app:navGraph="@navigation/my_nav"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_drawer_menu"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
