--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
 
     <EditText
         android:id="@+id/et_note_title_AddNoteScreen"
-        android:backgroundTint="@android:color/transparent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/transparent"
         android:hint="@string/enter_note_title"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,11 +24,11 @@
         android:id="@+id/noteDetails_Divider"
         android:layout_width="match_parent"
         android:layout_height="0.9dp"
-        app:layout_constraintTop_toBottomOf="@id/et_note_title_AddNoteScreen"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="20dp"
         app:dividerColor="#BDBDBD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_note_title_AddNoteScreen"
 
         />
 
@@ -44,11 +44,11 @@
 
         <EditText
             android:id="@+id/et_note_body_AddNoteScreen"
-            android:backgroundTint="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="10dp"
+            android:backgroundTint="@android:color/transparent"
             android:hint="@string/enter_note_body"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,31 +61,38 @@
 
 
     <Button
+        android:id="@+id/btn_saveNote_addNoteScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="45dp"
-        android:id="@+id/btn_saveNote_addNoteScreen"
         android:layout_marginTop="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="45dp"
         android:layout_marginBottom="20dp"
         android:elevation="7dp"
-        android:textStyle="bold"
-        android:textColor="@color/blue"
-        />
+        android:text="@string/save"
+        style="@style/MyButtonStyle_Primary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
+        android:id="@+id/btn_cancel_addNoteScreen"
+        style="@style/MyButtonStyle_Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="45dp"
-        android:id="@+id/btn_cancel_addNoteScreen"
         android:layout_marginTop="15dp"
-        android:elevation="7dp"
         android:layout_marginBottom="20dp"
-        />
+        android:text="@string/cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/btn_addToFavorites_addNoteScreen"
+        style="@style/MyButtonStyle_Secondary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Favorite"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_cancel_addNoteScreen"
+        app:layout_constraintEnd_toStartOf="@id/btn_saveNote_addNoteScreen"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
