--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -2,18 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_note_details"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/layout_note_details">
+    android:layout_height="match_parent">
 
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/note_title_NoteDetailsScreen"
-        android:backgroundTint="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/transparent"
         android:hint="@string/enter_note_title"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,10 +26,10 @@
         android:id="@+id/noteDetails_Divider"
         android:layout_width="match_parent"
         android:layout_height="0.9dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="20dp"
         app:dividerColor="#BDBDBD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/note_title_NoteDetailsScreen"
 
         />
@@ -63,31 +63,37 @@
 
     <Button
         android:id="@+id/btn_saveNote_NoteDetailsScreen"
+        style="@style/MyButtonStyle_Primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="45dp"
-        android:elevation="7dp"
-        android:text="Update"
-        android:textStyle="bold"
-        android:textColor="@color/blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
-        />
+        android:text="Update"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btn_cancel_NoteDetailsScreen"
+        style="@style/MyButtonStyle_Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
         android:layout_marginTop="15dp"
-        android:backgroundTint="#FFFFFF"
-        android:elevation="7dp"
+        android:layout_marginBottom="20dp"
         android:text="Cancel"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_addToFavorites_NoteDetailsScreen"
+        style="@style/MyButtonStyle_Secondary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Favorite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_saveNote_NoteDetailsScreen"
+        app:layout_constraintStart_toEndOf="@id/btn_cancel_NoteDetailsScreen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
