--- a/app/src/main/res/menu/actionbar_menu.xml
+++ b/app/src/main/res/menu/actionbar_menu.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/menu_deleteAllNotes"
-        android:title="Delete all notes"
+        android:title="@string/delete_all_notes"
         android:icon="@drawable/ic_delete"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 
-    <item
-        android:id="@+id/menu_search"
-        android:title="Search"
-        android:icon="@drawable/ic_search"
-        app:showAsAction="always"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
+<!--    <item-->
+<!--        android:id="@+id/menu_search"-->
+<!--        android:title="Search"-->
+<!--        android:icon="@drawable/ic_search"-->
+<!--        app:showAsAction="always"-->
+<!--        app:actionViewClass="androidx.appcompat.widget.SearchView"/>-->
 </menu>
