--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Noteify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Noteify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue_variant</item>
         <item name="colorOnPrimary">#000000</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/blue</item>
@@ -13,6 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
+<!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
+
     </style>
     
     <style name="Base.Widget.AppCompat.Button" parent="Widget.Material3.Button">
@@ -25,6 +27,34 @@
         <item name="colorAccent">@color/black</item>
     </style>
 
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="android:textColor">@color/black</item>
+        <item name="titleTextStyle">@style/ActionBarTitleText</item>
+    </style>
 
+    <style name="ActionBarTitleText" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="titleTextColor">@color/blue</item>
+    </style>
+
+    <style name="MyButtonStyle_Primary" parent="Base.Widget.AppCompat.Button">
+        <item name="android:textColor">@color/blue</item>
+        <item name="backgroundTint">@color/blue_tint</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">@dimen/button_elevation</item>
+    </style>
+
+    <style name="MyButtonStyle_Secondary" parent="Base.Widget.AppCompat.Button">
+        <item name="android:textColor">#535353</item>
+        <item name="backgroundTint">@color/grey_tint</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">@dimen/button_elevation</item>
+    </style>
+
+    <style name="MyButtonStyle_FavoriteButtonColour" parent="Base.Widget.AppCompat.Button">
+        <item name="android:textColor">#535353</item>
+        <item name="backgroundTint">#F964FD</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">@dimen/button_elevation</item>
+    </style>
 
 </resources>
