--- a/app/src/main/res/layout/fragment_note_item.xml
+++ b/app/src/main/res/layout/fragment_note_item.xml
@@ -21,26 +21,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <TextView
                 android:id="@+id/tv_noteTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/note_title"
-                android:textSize="19sp"
-                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tv_noteDate"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-<!--            android:fontFamily="@font/sf_pro_text_regular"-->
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tv_noteDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:text="@string/note_content"
-                android:textSize="14sp"
+                android:text="@string/date"
+                android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -54,7 +58,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:text="@string/note_content"
-            android:textSize="15sp"/>
+            android:textSize="14sp"/>
 
 
     </LinearLayout>
