--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,16 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+    <string-array name="theme_options">
+        <item>Light</item>
+        <item>Dark</item>
+        <item>Black</item>
+        <item>Follow system</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="theme_values">
+        <item>light</item>
+        <item>dark</item>
+        <item>black</item>
+        <item>follow_system</item>
     </string-array>
 </resources>
