--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Noteify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Noteify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue</item>
         <item name="colorPrimaryVariant">@color/blue_variant</item>
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
-<!--        <item name="actionBarStyle">@style/MyActionBar</item>-->
+        <item name="actionBarStyle">@style/MyActionBar</item>
 
     </style>
     
