ch - fixed few bugs in general - added screens for creating a new private note and updating it - added navigation routing for newly added screens and included their actions in click listeners

--- a/app/src/main/res/layout/fragment_add_private_note.xml
+++ b/app/src/main/res/layout/fragment_add_private_note.xml
@@ -2,14 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_note_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/note_title_NoteDetailsScreen"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/et_note_title_AddPrivateNoteScreen"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
@@ -21,16 +20,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <com.google.android.material.divider.MaterialDivider
-        android:id="@+id/noteDetails_Divider"
+        android:id="@+id/privateNoteDetails_Divider"
         android:layout_width="match_parent"
         android:layout_height="0.9dp"
         android:layout_marginHorizontal="20dp"
         app:dividerColor="#BDBDBD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/note_title_NoteDetailsScreen"
+        app:layout_constraintTop_toBottomOf="@id/et_note_title_AddPrivateNoteScreen"
 
         />
 
@@ -40,13 +38,12 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noteDetails_Divider">
+        app:layout_constraintTop_toBottomOf="@+id/privateNoteDetails_Divider">
 
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/note_body_NoteDetailsScreen"
+        <EditText
+            android:id="@+id/et_note_body_AddPrivateNoteScreen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -57,44 +54,46 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/et_note_title_AddNoteScreen" />
+
 
     </ScrollView>
 
+
     <Button
-        android:id="@+id/btn_saveNote_NoteDetailsScreen"
-        style="@style/MyButtonStyle_Primary"
+        android:id="@+id/btn_saveNote_addPrivateNoteScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="45dp"
         android:layout_marginBottom="20dp"
-        android:text="Update"
+        android:elevation="7dp"
+        android:text="@string/save"
+        style="@style/MyButtonStyle_Primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/btn_cancel_NoteDetailsScreen"
+        android:id="@+id/btn_cancel_addPrivateNoteScreen"
         style="@style/MyButtonStyle_Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="20dp"
-        android:text="Cancel"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btn_addToFavorites_NoteDetailsScreen"
-        style="@style/MyButtonStyle_Secondary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Favorite"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_saveNote_NoteDetailsScreen"
-        app:layout_constraintStart_toEndOf="@id/btn_cancel_NoteDetailsScreen" />
-
+<!--    <Button-->
+<!--        android:id="@+id/btn_addToFavorites_addPrivateNoteScreen"-->
+<!--        style="@style/MyButtonStyle_Secondary"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Favorite"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:visibility="gone"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@id/btn_cancel_addPrivateNoteScreen"-->
+<!--        app:layout_constraintEnd_toStartOf="@id/btn_saveNote_addPrivateNoteScreen"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
