--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -18,6 +18,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
+            android:focusedByDefault="false"
             android:background="@drawable/search_box_drawable"
             app:iconifiedByDefault="false"
             app:layout_constraintEnd_toEndOf="parent"
